* Introduction of an optional extension 'offering' metadata as a comma-separated list of offering name:version pairs. * Support for limiting registry catalogs to specific offerings by   adding selected offerings to a registry client configuration. * Add information about offerings used in a project to the runner JAR's   manifest.